gatsby/static/css/webflow-overrides.css
body {
    font-family: "Helvetica Neue",
        "Helvetica",
        Arial,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        sans-serif,
        "Apple Color Emoji",  /* Emojis*/
        "Segoe UI Emoji", /* Emojis*/
        "Segoe UI Symbol"; /* Emojis*/

    font-size: 16px;
    line-height: 1.5em;
}

label {
    display: initial;
}

pre {
  overflow-x: scroll;
  width: 100%;
  max-width: calc(100vw - 20px);
}

img {
  height: auto;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
}

.mximagine {
  font-size: 18x;
  font-weight: bold;
  line-height: 1.5em;
  text-align: left;
  list-style: none;
  margin-top: -40px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  left: -35px;
  max-width: 780px;
}

.mximagine li {
  margin-left: 7.1em;
}

.mximagine li:first-child {
  margin-left: 0em;
}

.mxthisismatrix {
  font-size: 32px;
  font-weight: bold;
  padding: 1em;
}

.mxmatrixdescription {
  font-size: 18px;
  max-width: 640px;
  margin-left: auto;
  margin-right: auto;
}

.mxhow {
  text-align: left;
}

.mxblock.mxblock--foundation {
  text-align: left;
  padding-bottom: 0px;
}

.mxgrid__item--guardian__bg__img {
  object-fit: cover;
  filter: grayscale(100%);
}

.mxgrid__item--guardian__bg__img:hover {
  filter: none;
}

.mxcontent__nav__link--title a, .mxcontent__nav__link a {
  color: inherit;
}

.bridgesPage img {
    max-width: 100px;
}

.bridgesPage table {
    width: 100%;
}

.legacy-table {
  text-align: left;
  margin-bottom: 10px;
}

.legacy-table td, tr, th {
  padding-right: 20px;
  padding-bottom: 4px;
}

.legacy-table th {
  padding-bottom: 8px;
}

.overscroll {
  overflow-x: scroll;
  width: 100%;
  max-width: calc(100vw - 20px);
}

.tmn-two-column {
    display: 'inline-table';
    column-count: 2;
    text-align: left;
}

.width-100 {
  width: 100%;
}

.definition-list {
  display: none;
}

div.title {
  font-size: large;
}

